...
    "infant": "شیرخوار"
  },
  "nutrition": {
    "title": "غذائیت",
    "perAdult": "ایک بالغ حصے میں",
    "value": "{{value}} {{unit}}",
    "kcal": "توانائی",
    "protein": "پروٹین",
    "carbs": "کاربوہائیڈریٹ",
    "fiber": "ریشہ",
    "fat": "چکنائی",
    "sodium": "سوڈیم",
    "iron": "آئرن",
...
